possibility for a clan member to join a close challenge if the challenge share clan with the user

--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -59,28 +59,33 @@
             </div>
         </div>
         <div class="d-flex flex-column justify-content-center">
-            {% if challenge.isPublic == true %}
-                {% if app.user in challenge.participants %}
-                    <form class="align-middle align-self-center mb-4 form-kyosc" method="post" action="{{ path('challenge_leave', {id: challenge.id}) }}">
-                        <input type="hidden" name="challengeId" value="{{ challenge.id }}">
-                        <input type="hidden" name="token" value="{{ csrf_token('challenge-leave') }}"/>
-                        <button
-                                class="btn btn-register text-uppercase"
-                                style="background-color: {{ color }}"
-                        >JE NE PARTICIPE PLUS</button>
-                    </form>
-                {% else %}
-                    <form class="align-middle align-self-center mb-4 form-kyosc" method="post" action="{{ path('challenge_join', {id: challenge.id}) }}">
-                        <input type="hidden" name="challengeId" value="{{ challenge.id }}">
-                        <input type="hidden" name="token" value="{{ csrf_token('challenge-join') }}"/>
-                        <button
-                                class="btn btn-participation btn-lg text-uppercase text-white"
-                                style="color:{{ color }}; border-color: {{ color }}; background-color: {{ color }}"
-                        >JE PARTICIPE</button>
-                    </form>
+            {% if app.user in challenge.participants %}
+                <form class="align-middle align-self-center mb-4 form-kyosc" method="post" action="{{ path('challenge_leave', {id: challenge.id}) }}">
+                    <input type="hidden" name="challengeId" value="{{ challenge.id }}">
+                    <input type="hidden" name="token" value="{{ csrf_token('challenge-leave') }}"/>
+                    <button
+                            class="btn btn-register text-uppercase"
+                            style="background-color: {{ color }}"
+                    >JE NE PARTICIPE PLUS</button>
+                </form>
+            {% elseif app.user %}
+                {% set isClanMember = false %}
+                {% for clan in challenge.clans %}
+                    {% if app.user in clan.members %}
+                        {% set isClanMember = true %}
+                    {% endif %}
+                {% endfor %}
+                {% if challenge.isPublic == true or isClanMember == true %}
+                <form class="align-middle align-self-center mb-4 form-kyosc" method="post" action="{{ path('challenge_join', {id: challenge.id}) }}">
+                    <input type="hidden" name="challengeId" value="{{ challenge.id }}">
+                    <input type="hidden" name="token" value="{{ csrf_token('challenge-join') }}"/>
+                    <button
+                            class="btn btn-participation btn-lg text-uppercase text-white"
+                            style="color:{{ color }}; border-color: {{ color }}; background-color: {{ color }}"
+                    >JE PARTICIPE</button>
+                </form>
                 {% endif %}
             {% endif %}
-
             {% if app.user and app.user == challenge.creator %}
             <div class="form-kyosc">
                 <a class="btn btn-participation text-uppercase text-white"
