remove 'qu'il vous faut' in homepage h2 banner

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -22,8 +22,9 @@
         {{ include('component/_home_main_carousel.html.twig') }}
     </div>
     <section class="home-banner" style="background: url('{{ asset('build/images/background/bgimg1.jpeg') }}') no-repeat center; background-size: cover;">
-        <h2 class="hide-before-scroll show-on-scroll text-korange transparent-background-round-darker p-4">En recherche d’activités de plein air, faites pour vous, vos amis ou vos clans ?<br>
-            KYOSC est la plateforme qu’il vous faut pour organiser et partager des moments forts dans une ambiance conviviale.<br>
+        <h2 class="hide-before-scroll show-on-scroll text-korange transparent-background-round-darker p-4">
+            En recherche d’activités de plein air, faites pour vous, vos amis ou vos clans ?<br>
+            KYOSC est la plateforme pour organiser et partager des moments forts dans une ambiance conviviale.<br>
             Alors n’attendez plus et lancez-vous dans votre propre aventure !
         </h2>
     </section>
