open and close converted to feminine in challenge index

--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -59,9 +59,9 @@
                             <div class="white-circle-img-goutte"></div>
                             <img class="img-goutte-index" src={{ asset(sportGoutte) }}>
                             {% if challenge.isPublic %}
-                                <span class="is-public-text open-text">Ouvert</span>
+                                <span class="is-public-text open-text">Ouverte</span>
                             {% else %}
-                                <span class="is-public-text close-text">Fermé</span>
+                                <span class="is-public-text close-text">Fermée</span>
                             {% endif %}
                         </div>
                         <div class="card-body p-2">
