better display for challenge (clan style with BG)

--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -2,6 +2,15 @@
 
 {% block title %}Aventure #{{ challenge.id }}{% endblock %}
 
+{% block background %}
+    class="background-profile" style="background:
+    {% if challenge.challengePhoto is not null %}
+        url('{{ vich_uploader_asset(challenge, 'challengePhotoFile')}}')
+    {% else %}
+        url('{{ asset('build/images/background/bgimg' ~ random(1, 11) ~ '.jpeg') }}')
+    {% endif %} no-repeat fixed center; background-size: cover;"
+{% endblock %}
+
 {% block body %}
     {% set color = challenge.sports[0].color %}
 
@@ -11,14 +20,7 @@
     </header>
     <section class="container px-5 my-2 my-md-5">
         <div class="row justify-content-center justify-content-md-around">
-            <div class="col-lg-6">
-                {% if challenge.challengePhoto is not null%}
-                    <img src="{{ vich_uploader_asset(challenge, 'challengePhotoFile') | imagine_filter('challenge_show_thumb')}}" alt="image du challenge" class="challenge-photo">
-                {% else %}
-                    <img src="{{ asset('uploads/challenge/challenge-default.jpeg') }}" alt="photo par défaut du challenge" class="w-100">
-                {% endif %}
-            </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 transparent-background-dark p-3">
                 <h3 class="challenge-quotation mb-4">{{ challenge.quotation }}</h3>
                 <p class="challenge-description">{{ challenge.description }}</p>
             </div>
@@ -26,7 +28,7 @@
     </section>
 
     <div class="mt-2 mb-4 container d-flex justify-content-center">
-        <div class="col-10 title-info-event">
+        <div class="col-10 title-info-event transparent-background-dark p-3">
             <h3>Informations sur l'évènement:</h3>
             <p>{{ challenge.information}}</p>
         </div>
@@ -34,7 +36,7 @@
 
     <section class="container d-flex flex-row">
         <div class="container arrow-container col-lg-8 col-sm-12">
-            <h2 class="text-center" style="color: {{color}}">LES INFORMATIONS CLEFS</h2>
+            <h2 class="text-center transparent-background-dark p-3" style="color: {{color}}">LES INFORMATIONS CLEFS</h2>
             <div class="arrow-info key-info-arrow" style="background-color: {{color}}">
                 <div class="row">
                     <div class="col-lg-12 ">
@@ -151,7 +153,7 @@
         </div>
     {#       end of modal for journey pop-up#}
 
-    <div class="container w-75 mx-auto my-5 challenge-organisator">
+    <div class="container w-75 mx-auto my-5 challenge-organisator transparent-background-dark p-3">
         <h2 class="mb-3 h5 text-uppercase text-center" style="color: {{color}}">Qui organise l'aventure ?</h2>
         <div class="row">
             <div class="col-lg-6 col-12 d-flex justify-content-center flex-column">
@@ -174,7 +176,7 @@
             </div>
         </div>
     </div>
-    <div class="w-75 mx-auto my-5 participants">
+    <div class="w-75 mx-auto my-5 participants transparent-background-dark p-3">
         <h2 class="h5 text-uppercase text-center mb-4" style="color: {{color}}">{{ challenge.participants|length}} participant{{ challenge.participants|length>1?'s':''}}</h2>
         <div class=" container d-flex justify-content-center">
         {% for participant in challenge.participants %}
