scrollbar for comments in both clan pages

--- a/assets/styles/clan.scss
+++ b/assets/styles/clan.scss
@@ -16,3 +16,9 @@
 .close-text {
     background-color: theme-color-level('kred');
 }
+
+.scroll-comment {
+    max-height: 600px;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+}
