--- a/templates/clan/my-clan.html.twig
+++ b/templates/clan/my-clan.html.twig
@@ -27,7 +27,7 @@
     <div class="w-75 mx-auto my-5 participants transparent-background-dark p-3">
         <h2>Messages</h2>
         <p>Les messages laissés ici ne peuvent être vus que par les membres du clan</p>
-        <div class="d-flex flex-column w-100">
+        <div class="d-flex flex-column w-100 scroll-comment">
         {% if clan.messages|length >= 1 %}
             {% for message in clan.messages|reverse %}
                 {% if message.isPublic == false %}
