--- a/templates/clan/show.html.twig
+++ b/templates/clan/show.html.twig
@@ -118,7 +118,7 @@
     </div>
     <div class="w-75 mx-auto my-5 participants transparent-background-dark p-3">
         <h2>Commentaires</h2>
-        <div class="d-flex flex-column w-100">
+        <div class="d-flex flex-column w-100 scroll-comment">
             {% if clan.messages|length >= 1 %}
                 {% for message in clan.messages|reverse %}
                     {% if message.isPublic %}
