--- a/templates/clan/my-clan.html.twig
+++ b/templates/clan/my-clan.html.twig
@@ -81,8 +81,11 @@
     </div>
     <div class="w-75 mx-auto my-5 participants transparent-background-dark p-3">
         <h2>Aventures du clan</h2>
+        <div class="form-kyosc d-flex align-items-center justify-content-center mb-5">
+            <a href="{{ path('challenge_new') }}" class="btn-login btn btn-lg">Créer une aventure</a>
+        </div>
         <div class="container form-kyosc mb-4">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center scroll-comment">
                 {% for challenge in clan.challenges %}
                     {% if challenge.creator in clan.members %}
                         <div class="card col-12 col-sm-6 col-md-4 col-xl-3 p-3 position-relative m-4">
@@ -100,7 +103,7 @@
                                 </div>
                                 <div class="card-body p-2">
                                     <h3 class="card-title h6 text-center text-uppercase">{{ challenge.title | capitalize }}</h3>
-                                    créé par {{ challenge.creator.pseudo? challenge.creator.pseudo : challenge.creator.firstname ~' '~ challenge.creator.lastname}}
+                                    Créée par {{ challenge.creator.pseudo? challenge.creator.pseudo : challenge.creator.firstname ~' '~ challenge.creator.lastname}}
                                 </div>
                             </a>
                         </div>
