--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -296,7 +296,7 @@
         <div class="container margin mt-4">
             <h2 class="mb-4"> Mes clans créés - {{ user.createdClans|length }}</h2>
         </div>
-        <div class="d-flex flex-column align-items-center">
+        <div class="d-flex flex-column align-items-center scroll-comment">
             {% for clan in user.createdClans %}
                 <div class="d-flex flex-column flex-md-row align-items-center justify-content-between w-75 p-2">
                     {% if clan.logo is not null %}
@@ -327,7 +327,7 @@
             <div class="container margin">
                 <h2 class="mb-4"> Les clans dont je suis membre - {{ user.clans|length }}</h2>
             </div>
-            <div class="d-flex flex-column align-items-center">
+            <div class="d-flex flex-column align-items-center scroll-comment">
                 {% for clan in user.clans %}
                     <div class="d-flex flex-column flex-md-row align-items-center justify-content-between w-75 p-2">
                         {% if clan.logo is not null %}
