--- a/templates/profil/user.html.twig
+++ b/templates/profil/user.html.twig
@@ -57,7 +57,7 @@
                 {% endif %} - {{ challenges|length }}</h2>
         </div>
         <div class="container form-kyosc mb-4">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center scroll-comment">
                 {% for challenge in challenges %}
                     <div class="card col-12 col-sm-6 col-md-4 col-xl-3 p-3 position-relative m-4">
                         <a class=" text-decoration-none text-dark h-100"  href="{{ path("challenge_show", {id: challenge.id}) }}">
