--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -4,7 +4,27 @@
 
 {% block body %}
     <div class="home-menu">
-        <img src="{{ asset( defaultLogo ) }}" alt="kyosc white logo" class="home-logo">
+        <ul class="sidenav">
+            {% if app.user %}
+                {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path("admin") }}">Espace administrateur</a>
+                {% endif %}
+            {% endif %}
+            <li> <a href="{{ path("home") }}">Accueil</a> </li>
+            <li> <a href="{{ path("challenge_index") }}">Les aventures</a> </li>
+            <li> <a href="{{ path("clan_index") }}">Les clans</a> </li>
+            {% if app.user %}
+                <li> <a href="{{ path("profil_my_profil") }}">Mon espace</a> </li>
+                <li> <a href="{{ path("challenge_new") }}">Nouvelle aventure</a> </li>
+                <li> <a href="{{ path("clan_new") }}">Nouveau clan</a> </li>
+                <li> <a href="{{ path("app_logout") }}">Déconnexion</a> </li>
+            {% else %}
+                <li> <a href="{{ path("app_login") }}">Se connecter</a> </li>
+            {% endif %}
+        </ul>
+        <button class="navbar-toggler" type="button">
+            <img src="{{ asset( defaultLogo ) }}" alt="kyosc white logo" class="home-logo">
+        </button>
         <h1 class="text-uppercase">À vous de créer <br><span class="second-color-title">votre propre aventure sportive</span></h1>
         <div class="d-flex flex-column align-items-center home-button-wrapper">
             {% if app.user %}
@@ -136,6 +156,7 @@
             {% endfor %}
         </div>
     </section>
+    <div class="nav-menu-overlay"></div>
 {% endblock %}
 
 {% block javascripts %}
