--- a/assets/styles/drawermenu.scss
+++ b/assets/styles/drawermenu.scss
@@ -7,7 +7,7 @@
     height: 80vh;
     left: 0;
     overflow-x: hidden;
-    padding: 60px 0;
+    padding: 30px 0 60px 0;
     position: fixed;
     top: 0;
     transition-duration: .5s;
