--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -250,12 +250,12 @@
     </div>
     <div class="w-75 mx-auto my-5 participants transparent-background-dark p-3">
         <h2>Vidéos</h2>
-        <a class="journey-link-dark" data-toggle="modal" data-target="#youtubeLinkForm">
+        <a class="journey-link-dark mb-3" data-toggle="modal" data-target="#youtubeLinkForm">
             <h2 class="mt-5 arrow-header">Ajoutez des vidéos !<br>
                 <img src="{{ asset('build/images/fleche/fbnoir.png') }}" class="w-25">
             </h2>
         </a>
-        <div class="d-flex flex-column justify-content-center align-items-center w-100 scroll-comment">
+        <div class="mt-3 d-flex flex-column align-items-center w-100 scroll-comment">
             {% if challenge.videos|length >= 1 %}
                 {% for video in challenge.videos|reverse %}
                     <div class="d-flex flex-column justify-content-center align-items-center m-3">
