crééEs in homepage

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -51,7 +51,7 @@
     <section class="home-choice-container">
         <div class="home-choice hide-before-scroll show-on-scroll d-flex align-baseline">
             <img src="{{ asset('build/images/picto/komplice.png') }}" class="home-choice-picto mb-3">
-            <h2 class="text-kblue">Retrouvez facilement les informations <br> essentielles des aventures <br> créés avec vos clans</h2>
+            <h2 class="text-kblue">Retrouvez facilement les informations <br> essentielles des aventures <br> créées avec vos clans</h2>
             <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
         </div>
         <div class="home-choice hide-before-scroll show-on-scroll">
