--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -47,7 +47,7 @@
             {% for challenge in pagination %}
                 {% set sportGoutte = challenge.sports|length>1 ? multiSportGoutte : challenge.sports|length==1 ? "/uploads/goutte/"~challenge.sports['0'].goutte : defaultLogo %}
                 {% set sportColor = challenge.sports|length>1 ? multiSportColor : challenge.sports|length==1 ? challenge.sports['0'].color : '#FFF' %}
-                <div class="col-12 col-sm-6 col-md-4 col-xl-3 p-3 position-relative">
+                <div class="challenge-card col-12 col-sm-6 col-md-4 col-xl-3 p-3 position-relative">
                     <a class="card text-decoration-none text-dark h-100 no-bg-border"
                        href="{{ path("challenge_show", {id: challenge.id}) }}">
                         <p class="title-date-card text-center bg-dark text-white m-0">{{ challenge.dateStart |format_datetime(pattern="dd MMMM Y",locale='fr') }}</p>
