basic account delete ok

--- a/templates/profil/user.html.twig
+++ b/templates/profil/user.html.twig
@@ -18,7 +18,7 @@
         {% if app.user.profilPhoto is not null%}
             <img id="output" src="{{ vich_uploader_asset(user, 'profilPhotoFile') | imagine_filter('avatar_thumb') }}" alt="{{ app.user.profilPhoto }}" class="profil-photo mt-4 w-75">
         {% else %}
-            <img id="output" src="{{ asset('uploads/profils/default-profil-picture.png') }}" alt="default profil picture" class="mt-4 w-75">
+            <img id="output" src="{{ asset('uploads/profils/default-profil-picture.png') }}" alt="default profil picture" class="mt-4">
         {% endif %}
         <div class="my-5 p-4 w-75 transparent-background-dark">
             {% if user.biography %}
