--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -33,7 +33,7 @@
                     {% if app.user.profilPhoto is not null%}
                         <img id="output" src="{{ vich_uploader_asset(user, 'profilPhotoFile') | imagine_filter('avatar_thumb') }}" alt="{{ app.user.profilPhoto }}" class="profil-photo cursor-pointer w-75">
                     {% else %}
-                        <img id="output" src="{{ asset('uploads/profils/default-profil-picture.png') }}" alt="default profil picture" class="profil-photo cursor-pointer w-75">
+                        <img id="output" src="{{ asset('uploads/profils/default-profil-picture.png') }}" alt="default profil picture" class="profil-photo cursor-pointer">
                     {% endif %}
                 </label>
             </div>
@@ -351,6 +351,9 @@
                 {% endfor %}
             </div>
         </section>
+        <div class="mt-5 pb-5 d-flex flex-column align-items-center">
+            {% include('user/_delete_form.html.twig') %}
+        </div>
     </div>
 {% endblock body %}
 
