--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -47,7 +47,7 @@
             {% for challenge in pagination %}
                 {% set multiSportGoutte = "build/images/goutte/kmulti.png" %}
                 {% set sportGoutte = challenge.sports|length>1 ? multiSportGoutte : challenge.sports|length==1 ? "/uploads/goutte/"~challenge.sports['0'].goutte : defaultLogo %}
-                <div class="col-12 col-sm-6 col-md-4 col-xl-3 p-3 position-relative index-card-max-width">
+                <div class="m-3 col-12 col-sm-6 col-md-4 col-xl-3 p-3 position-relative index-card-max-width">
                     <a class="card text-decoration-none text-dark h-100 no-bg-border"
                        href="{{ path("challenge_show", {id: challenge.id}) }}">
                         <p class="title-date-card text-center bg-dark text-white m-0">{{ challenge.dateStart |format_datetime(pattern="dd MMMM Y",locale='fr') }}</p>
